New Classes &  Objects

--- a/src/test/resources/TestConfig.properties
+++ b/src/test/resources/TestConfig.properties
@@ -23,8 +23,8 @@ settings.test.pdf.report.title=TestCrew Report
 settings.web.browser=chrome
 settings.web.browser.teardown=true
 settings.web.browser.download.latest=true
-#settings.web.browser.chrome.driver.path=drivers/chromedriver.exe
-#settings.web.browser.chrome.headless=true
+settings.web.browser.chrome.driver.path=drivers/chromedriver.exe
+settings.web.browser.chrome.headless=false
 settings.web.browser.chrome.incognito=true
 
 # API Settings
