--- a/src/test/resources/TestConfig.properties
+++ b/src/test/resources/TestConfig.properties
@@ -2,7 +2,7 @@
 #test.data.source=csv
 #test.data.csv.suite.file=SuiteDetails.csv
 test.data.source=xlsx
-test.data.xlsx.workbook=Run_Manager.xlsx
+test.data.xlsx.workbook=Run_Manager 5.xlsx
 test.data.xlsx.workbook.suite.sheet=SuiteDetails
 
 # Test Settings
