--- a/src/test/resources/TestConfig.properties
+++ b/src/test/resources/TestConfig.properties
@@ -2,7 +2,7 @@
 #test.data.source=csv
 #test.data.csv.suite.file=SuiteDetails.csv
 test.data.source=xlsx
-test.data.xlsx.workbook=Run_Manager 5.xlsx
+test.data.xlsx.workbook=Run_Manager.xlsx
 test.data.xlsx.workbook.suite.sheet=SuiteDetails
 
 # Test Settings
@@ -12,7 +12,7 @@ settings.test.record.video=true
 settings.test.extend.xml=true
 settings.test.extend.report.offline=false
 settings.test.extend.report.log.level=info
-settings.test.extend.report.step.screenshot=false
+settings.test.extend.report.step.screenshot=true
 settings.test.extend.report.step.screenshot.resolution=1920x1080
 # 1920x1080, 1280x1024, 1024x768, 960x720, 800x600, 720x480
 settings.test.extend.report.environment=UAT
