--- a/JenkinsFile.yml
+++ b/JenkinsFile.yml
@@ -3,7 +3,7 @@ pipeline {
 
     tools {
         jdk 'JavaLocal' 
-        maven 'LocalMaven'
+        maven 'MavenLocal'
     }
     stages {
         stage('Build') {
