--- a/JenkinsFile.yml
+++ b/JenkinsFile.yml
@@ -8,7 +8,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                bat 'mvn clean install'
+                bat 'mvn -Dmaven.repo.local=dependencies clean install -o'
             }
         }
     }
